fixup! fix(desktop): new auto-updater enabling behaviour

--- a/packages/suite-desktop/src-electron/tsconfig.json
+++ b/packages/suite-desktop/src-electron/tsconfig.json
@@ -22,13 +22,13 @@
         "skipLibCheck": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
-        "noImplicitAny": true,
-        "baseUrl": "."
+        "noImplicitAny": true
     },
     "include": [
         "**/*.ts"
     ],
     "exclude": [
         "**/*.js",
+        "**/*.test.ts",
     ]
 }
